--- a/src/flmmlmonitor.mxml
+++ b/src/flmmlmonitor.mxml
@@ -2,6 +2,7 @@
 
 <mx:Application xmlns:mx="http://www.adobe.com/2006/mxml"
                 xmlns:flmml="com.txt_nifty.sketch.flmml.*"
+                xmlns:flmon="net.vt6f3ohw.flmon.*"
                 layout="absolute"
 				frameRate="60"
 				creationComplete="init();">
@@ -168,15 +169,14 @@
 									pianorollVScrollBar.maxScrollPosition = PianoRoll.PIANOROLL_HEIGHT - pianoroll.height;
 								}
 							});
-							pianorollcontainer.focusEnabled = true;
-							pianorollcontainer.addEventListener(KeyboardEvent.KEY_DOWN, function(e2:KeyboardEvent):void {
+							pianoroll.addEventListener(KeyboardEvent.KEY_DOWN, function(e2:KeyboardEvent):void {
 								_isKeyPressed[e2.keyCode] = true;
 							});
-							pianorollcontainer.addEventListener(KeyboardEvent.KEY_UP, function(e2:KeyboardEvent):void {
+							pianoroll.addEventListener(KeyboardEvent.KEY_UP, function(e2:KeyboardEvent):void {
 								_isKeyPressed[e2.keyCode] = false;
 							});
 							// TODO: キー押下状態中にフォーカスがどっか行ったときに備えて FocusEvent.OUT 時にキー押下状態を全部 false にするコードを追加
-							// pianorollcontainer.addEventListener(FocusEvent.FOCUS_OUT, function(e3:FocusEvent):void {
+							// pianoroll.addEventListener(FocusEvent.FOCUS_OUT, function(e3:FocusEvent):void {
 							// 	trace(e3);
 							// });
 						}
@@ -338,8 +338,7 @@
 	                   paddingTop="4" paddingBottom="4" paddingLeft="4" paddingRight="4">
 	      <mx:VDividedBox width="100%" height="100%" backgroundColor="#dddddd">
 	        <mx:TextArea id="input" width="100%" height="2%" fontSize="14" text="L8 O5CDEFGAB&lt;C"></mx:TextArea>
-			<mx:TextArea id="pianorollcontainer" width="100%" height="2%"></mx:TextArea>
-			<mx:Grid width="100%" height="94%" horizontalGap="0" verticalGap="0" backgroundColor="#ffdddd">
+			<mx:Grid width="100%" height="96%" horizontalGap="0" verticalGap="0" backgroundColor="#ffdddd">
 				<mx:GridRow width="100%">
 					<mx:GridItem backgroundColor="#0080C0">
 					</mx:GridItem>
@@ -355,7 +354,7 @@
 						<!--鍵盤--><mx:Image></mx:Image>
 					</mx:GridItem>
 					<mx:GridItem width="100%" height="100%">
-						<!--ピアノロール--><mx:Image id="pianoroll" width="100%" height="100%"></mx:Image>
+						<!--ピアノロール--><flmon:FocusImage id="pianoroll" width="100%" height="100%"></flmon:FocusImage>
 					</mx:GridItem>
 					<mx:GridItem backgroundColor="#ffffff">
 						<!--縦スクロールバー--><mx:VScrollBar id="pianorollVScrollBar" height="100%"
